--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to My Portfolio</h1>
-    <p>Hi, I'm Christina. I'm learning web development and this is my portfolio.</p>
+    <p>Hi, I'm Yousab I'm learning web development and this is my portfolio.</p>
 </body>
 </html>
