--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <img src="images/chesslogo.jpeg" alt="Chess Logo">
     <title>My Portfolio</title>
 </head>
 <body>
     <h1>Welcome to My Portfolio</h1>
-    <p>Hi, I'm Yousab I'm learning web development and this is my portfolio.</p>
+    <p>Hi, I'm Yousab. I'm learning web development and this is my portfolio.</p>
 </body>
 </html>
