--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <img src="images/chesslogo.jpeg" alt="Chess Logo">
@@ -9,5 +10,6 @@
 <body>
     <h1>Welcome to My Portfolio</h1>
     <p>Hi, I'm Yousab. I'm learning web development and this is my portfolio.</p>
+    <a href="https://www.chess.com/member/gyousab" target="_blank" >Visit my Chess.com profile</a>
 </body>
 </html>
