Updated page with functional scripts

--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="images/chesslogo.jpeg" alt="Chess Logo">
-    <title>My Portfolio</title>
+    <title>My Chess Games Throughout The Semester</title>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>Hi, I'm Yousab. I'm learning web development and this is my portfolio.</p>
-    <a href="https://www.chess.com/member/gyousab" target="_blank" >Visit my Chess.com profile</a>
+    <header>
+        <img src="images/chesslogo.jpeg" alt="Chess Logo">
+        <h1>My Chess Games Throughout The Semester</h1>
+    </header>
+    <main>
+        <p>Hi, I'm Yousab. Throughout the semester I played 1 Chess match a day and used Chess.com's free daily rating to get the scores from all these games. This is a list of all the games I played during the semester. The picture associated with the game is based on the accuracy score I earned from the game.</p>
+        <a href="https://www.chess.com/member/gyousab" target="_blank">Visit my Chess.com profile</a>
+    </main>
+    <h2>Game Collection</h2>
+    <button id="sortButton">Sort by Highest Accuracy</button>
+
+    <div id="collection"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
